<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top"
    android:foregroundGravity="top"
    android:gravity="center_horizontal|top|center_vertical"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:foregroundGravity="top"
        android:gravity="center_horizontal|top"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img1"
            android:layout_width="120dp"
            android:layout_height="200dp"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:foregroundGravity="top"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/img2"
            android:layout_width="120dp"
            android:layout_height="200dp"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:foregroundGravity="top"
            tools:srcCompat="@tools:sample/avatars" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:foregroundGravity="top"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_copy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:foregroundGravity="top"
            android:gravity="center"
            android:onClick="filter_copy"
            android:text="@string/btn_copy" />

        <Button
            android:id="@+id/btn_invert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:foregroundGravity="top"
            android:gravity="center"
            android:onClick="filter_invert"
            android:text="@string/btn_invertColors" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:foregroundGravity="top"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_greyTones"
            android:layout_width="207dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:foregroundGravity="top"
            android:onClick="filter_greyTones"
            android:text="@string/btn_invertGreyTones" />

        <Button
            android:id="@+id/btn_blackAndWhite"
            android:layout_width="204dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:foregroundGravity="top"
            android:onClick="filter_BlackWhite"
            android:text="@string/btn_setBlackWhite" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:foregroundGravity="top"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_brightness"
            android:layout_width="208dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:foregroundGravity="top"
            android:onClick="filter_Brightness"
            android:text="brightness" />

        <Button
            android:id="@+id/btn_contrast"
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:foregroundGravity="top"
            android:onClick="filter_contrast"
            android:text="@string/btn_Contrast" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_verticalflip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:foregroundGravity="top"
        android:onClick="filter_VerticalFlip"
        android:text="@string/btn_verticalFlip" />

    <Button
        android:id="@+id/btn_HorizontalFlip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:foregroundGravity="top"
        android:onClick="filter_HorizontalFlip"
        android:text="@string/btn_horizontalFlip" />

</LinearLayout>